
- jEdit is now always using continuous layout in JSplitPane (Matthieu Casanova)

- Fixed keyboard handling of comboboxes in jedit's option panes.
  (Bug #3415064 - Alan Ezust)

- Changed menus to use Mac-specific symbols for accelerator keys when using OS X
  and the native look & feel (SF.net patch #1950147 - Nathan Gray)

- Added an option (on by default) to use the native Quartz renderer on
  Mac OS X (Evan Wright)

- Fixed keyboard handling of drop-down menus in File System Browser.
  (#1571578 - Alan Ezust)

- Fixed "Use textarea colors" for dockables created in non-metal L&F.
  (#1794400 - Alan Ezust)

- New option in Saving and Backup pane: Use File System Browser dir for
  Save-As (# 1591441 - Alan Ezust)

- RegisterViewer: set initial focus to registerList, added key bindings for
  inserting content, clearing a register and leaving the registerList
  (#3437779 - Martin Raspe)

}}}
{{{ Miscellaneous

- Pasting a VFSFile as String dataflavor will now paste the full path instead of
  the name of the file (Matthieu Casanova)

- The EditingOptionPane has now an option to remember the user choice about
  large file treatment (Matthieu Casanova)

- OS/2 tasks were removed from the Java installer as OS/2 does not
  have a working Java 6 implementation and probably never will have
  (Björn "Vampire" Kautler)

- jEdit support for keymaps (Matthieu Casanova)

- User Settings directory migrated to %APPDATA%/jEdit on Windows
  (#2510763 - Alan Ezust)

- Added support for "Find Previous" when searching in multiple files (Evan Wright)

- Applied patch to Get_Class_Name macro from lxdyglt to find
  classname for inner classes. (#3301598 - Dale Anson)
  
- Fixed some edge cases in the Make_Get_and_Set_Methods macro, properly handle
  comments, multi-line variable declarations and multiple initializers.
  (Dale Anson)
}}}

}}}

jEdit buffer local properties:
:maxLineLen=80:wrap=hard:autoIndent=simple:noTabs=true:indentSize=2:tabSize=2:
:folding=explicit:collapseFolds=2